--- a/lupify-gui/lupify/templates/index.html
+++ b/lupify-gui/lupify/templates/index.html
@@ -1,13 +1,32 @@
 {% extends 'base.html' %}
-{% block container %}
+{% block content %}
 
-<div class="form-group col-xs-12 col-md-12">
-    <div class="form-group col-xs-6 col-md-6">
-        <input type="text" id="searchHost" class="form-control col-md-2" onkeyup="searchHost()" placeholder="Search Host...">
-    </div>
-    <div class="form-group col-xs-6 col-md-6">
-        <input type="text" id="searchIp" class="form-control col-md-1" onkeyup="searchIp()" placeholder="Search IP...">
-    </div>
+                        <h2>Lorem Ipsum Dolor</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            
+                        <div class="line"></div>
+            
+                        <h2>Lorem Ipsum Dolor</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            
+                        <div class="line"></div>
+            
+                        <h2>Lorem Ipsum Dolor</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            
+                        <div class="line"></div>
+            
+                        <h3>Lorem Ipsum Dolor</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-</div>
+<!-- <div class="form-group col-xs-12 col-md-12"> -->
+    <!-- <div class="form-group col-xs-6 col-md-6"> -->
+        <!-- <input type="text" id="searchHost" class="form-control col-md-2" onkeyup="searchHost()" placeholder="Search Host..."> -->
+    <!-- </div> -->
+    <!-- <div class="form-group col-xs-6 col-md-6"> -->
+        <!-- <input type="text" id="searchIp" class="form-control col-md-1" onkeyup="searchIp()" placeholder="Search IP..."> -->
+    <!-- </div> -->
+<!--  -->
+<!-- </div> -->
 {% endblock %}
