--- a/lupify-gui/lupify/templates/login.html
+++ b/lupify-gui/lupify/templates/login.html
@@ -2,7 +2,7 @@
 {% from "form_macros.html" import render_login %}
 {% from "form_macros.html" import render_checkbox %}
 
-{% block container %}
+{% block content %}
 
 <div class="form-group col-xs-6 col-md-6 col-xs-offset-3">
     <h1 style="clear:both">Please login</h1>
